[tool.poetry]
name = "dat-api"
version = "0.1.0"
description = "Unified API for dat ops"
authors = ["Rijumone Choudhuri <mailmeonriju@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
